# kernel-old

./: .clang-format  .config  .gitattributes  .gitignore  .gitmodules  .vimrc  Brewfile  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.save  README  README.md  compile.sh  docker_build.sh  run  run-uefi.sh  run.sh  test  ¨
.devcontainer/: devcontainer.json  install.sh
.github/: FUNDING.yml
.github/workflows/: build.yml
arch/i386/: README.md  config.mk  linker.ld
arch/x86/: gen-leaf.sh  x86-leaf.toolchain.cmake
arch/x86_64/: CMakeLists.txt  config.mk  gen-limine.sh  gen.sh  linker.ld  toolchain.cmake  x86_64-limine.toolchain.cmake
arch/x86_64/bios/: ovmf.fd
arch/x86_64/modules/: ramdisk
arch/x86_64/public/: limine.cfg
arch/x86_64/root/: limine.cfg
dev/: run.sh
drivers/: hello.c  linker.ld
env/: build  clean  configure  format  soft-clean
initrd/: bye
initrd/etc/: motd
initrd/sys/kernel/: kernel.map
initrd/sys/run/drivers/: hello
initrd/test/: hello.txt
initrd/test/secrets/: homework
initrd/usr/share/leaf/: config.json
kernel/: CMakeLists.txt  entry.c  leaf.c  leaf.h  main.c
kernel/arch/apic/: apic.c
kernel/arch/cpu/: cpu.c  cpuid.c  utils.c
kernel/arch/cpu/rsdt/: rsdt.c
kernel/arch/idt/: idt.c
kernel/arch/madt/: madt.c
kernel/arch/pic/: pic.c
kernel/arch/pit/: pit.c
kernel/arch/x86_64/acpi/: acpi.c  fadt.c  hpet.c  madt.c  mcfg.c  rsdt.c
kernel/arch/x86_64/apic/: apic.c  lapic.c  madt.c
kernel/arch/x86_64/cpu/: cpu.c  cpuid.c  utils.c
kernel/arch/x86_64/idt/: idt.asm  idt.c
kernel/arch/x86_64/pic/: pic.c
kernel/bitmap/: bitmap.c
kernel/drivers/cpu/: cpu.c
kernel/drivers/pci/: pci.c
kernel/drivers/serial/: serial.c
kernel/drivers/stdio/: printf.c  serial.c
kernel/drivers/tty/: tty.c
kernel/fs/: initrd.c  path.c  tar.c  vfs.c
kernel/include/arch/apic/: apic.h  ioapic.h
kernel/include/arch/cpu/: cpu.h  cpuid.h  stack.h  utils.h
kernel/include/arch/cpu/rsdt/: rsdt.h
kernel/include/arch/madt/: madt.h
kernel/include/arch/pic/: pic.h
kernel/include/arch/pit/: pit.h
kernel/include/arch/x86_64/acpi/: acpi.h  fadt.h  hpet.h  madt.h  mcfg.h  rsdt.h
kernel/include/arch/x86_64/apic/: apic.h  lapic.h  madt.h
kernel/include/arch/x86_64/cpu/: cpu.h  utils.h
kernel/include/arch/x86_64/idt/: idt.h
kernel/include/arch/x86_64/pic/: pic.h
kernel/include/bitmap/: bitmap.h
kernel/include/drivers/cpu/: cpu.h
kernel/include/drivers/pci/: pci.h
kernel/include/drivers/serial/: serial.h
kernel/include/drivers/stdio/: printf.h
kernel/include/drivers/tty/: tty.h
kernel/include/fs/: initrd.h  path.h  tar.h  vfs.h
kernel/include/klibc/: printf.h
kernel/include/libc/: ctype.h  math.h  string.h  vector.h
kernel/include/libc/stdio/: printf.h
kernel/include/libc/stdlib/: atoi.h
kernel/include/libc/stdlib/memory/: kheap.h  pmm.h  vmm.h
kernel/include/memory/: kheap.h  pmm.h
kernel/include/sys/: _config.h  backtrace.h  leaf.h  leaf_private.h  limine.h  logger.h  stable.h
kernel/include/sys/run/: runner.h
kernel/include/sys/time/: rtc.h
kernel/include/utils/: check.h  convertion.h  hash.h
kernel/include/utils/lwjson/: lwjson.h  lwjson_opt.h
kernel/include/utils/parsing/: elf.h  ini.h
kernel/libc/: ctype.c  math.c  string.c
kernel/libc/stdio/: printf.c
kernel/libc/stdlib/: atoi.c
kernel/libc/stdlib/memory/: kheap.c  pmm.c  vmm.c
kernel/memory/: kheap.c  pmm.c
kernel/sys/: backtrace.c  logger.c  stable.c
kernel/sys/run/: runner.c
kernel/sys/time/: rtc.c
kernel/utils/: check.c  convertion.c  hash.c
kernel/utils/lwjson/: lwjson.c  lwjson_debug.c  lwjson_stream.c
kernel/utils/parsing/: elf.c  ini.c
